# riscv64

./: .gitignore  CMakeLists.txt  README.md  backendConfig.cmake.in  riscv64Config.cmake.in  xmake.lua
include/: ABI.h  BasicBlockReordering.h  CodeGen.h  CompilerType.h  ConstantFoldingPass.h  CopyPropagationPass.h  DeadCodeElimination.h  FloatConstantPool.h  FoldMemoryAccessPass.h  FrameIndexElimination.h  FrameIndexPass.h  GlobalVariable.h  MagicDivision.h  Printer.cpp  RegAllocChaitin.h  Segment.h  SpillChainManager.h  StackFrameManager.h  Target.h  UnionFind.h  ValueReusePass.h  Visit.h  WhileBranchPredictionPass.h
include/Instructions/: All.h  BasicBlock.h  Function.h  Instruction.h  MachineOperand.h  Module.h
include/RAGreedy/: LiveIntervalUnion.h  LiveIntervals.h  LiveRegMatrix.h  RegAllocGreedy.h  RegisterRewriter.h  SlotIndexes.h  VirtRegMap.h
src/: ABI.cpp  BasicBlockReordering.cpp  CFG.cpp  ConstantFoldingPass.cpp  CopyPropagationPass.cpp  DeadCodeElimination.cpp  FloatConstantPool.cpp  FoldMemoryAccessPass.cpp  FrameIndexElimination.cpp  FrameIndexPass.cpp  InstrSelection.cpp  Instruction.cpp  MagicDivision.cpp  Printer.cpp  RegAlloc.cpp  RegAllocChaitin.cpp  RegAllocChaitin.h  RegAllocGreedy.cpp  RegAllocGreedy.h  SpillChainManager.cpp  SpillChainManager.h  SpillCodeOptimizer.cpp  SpillCodeOptimizer.h  StackFrameManager.cpp  StackFrameManager.h  StoreImm.cpp  Target.cpp  ValueReusePass.cpp  ValueReusePass_fixed.cpp  Visit.cpp  VisitFuncArg.cpp  WhileBranchPredictionPass.cpp
src/RAGreedy/: LiveIntervalUnion.cpp  LiveIntervals.cpp  LiveRegMatrix.cpp  RegAllocGreedy.cpp  RegisterRewriter.cpp  SlotIndexes.cpp  VirtRegMap.cpp
tests/: Makefile  README.md  run_demo.sh  test_codegen.cpp  test_framework.cpp  test_runner.cpp  xmake.lua
tests/testcases/: arithmetic_ops.cpp  conditional_branch.cpp  imm_add.cpp  simple_add.cpp  simple_return.cpp
